--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 changelog of the bytecode_iot_module
 
+Version 1.1 (18-Feb-2020)
+* Bugs fixed and new xml features 
+
 Version 1.0 (23-Aug-2019)
 * Published to Github. 
 
